Github pages deploy

--- a/cameral_obligation/conclusions/index.html
+++ b/cameral_obligation/conclusions/index.html
@@ -589,7 +589,8 @@
                 <p><strong>Appendix</strong></p>
                 <p>
                   Documents with cameral obligation in the
-                  <a href="/accademiaessaysvolumeone/appendix/">database</a> of
+                  <a href="/accademiaessaysvolumeone/cameral_obligation/appendix/">database</a>
+                  of
                   <em>The History of the Accademia di San Luca, c. 1590–1635:
                     Documents from the Archivio di Stato di Roma</em>.
                 </p>
