--- a/cameral_obligation/index.html
+++ b/cameral_obligation/index.html
@@ -429,7 +429,7 @@
                   1644 maintained that in the Papal States contracts were almost
                   always stipulated with cameral obligations “In Statu
                   Ecclesiastico fere semper stipulantur contractus sub
-                  obligatione Camerali.”<a href="/accademiaessaysvolumeone/endnotes/#note-2"><sup>2</sup></a>
+                  obligatione Camerali.”<a href="//endnotes/#note-2"><sup>2</sup></a>
                   To underline its importance, we can add that the magnificence
                   of Renaissance and baroque Rome was brought about by artists
                   and artisans whose contracts abounded in obligations
