--- a/contents/index.html
+++ b/contents/index.html
@@ -525,7 +525,7 @@
                               </svg> </span></a>
                         </li>
                         <li class="level-1 page-item">
-                          <a href="/accademiaessaysvolumeone/obbligazione_camerale/endnotesita/">Note<span class="contributor-divider"> — </span><span class="contributor"><span class="quire-contributor">Antonia Fiori</span></span><span class="arrow" data-outputs-exclude="epub,pdf"><svg data-outputs-exclude="epub,pdf">
+                          <a href="/accademiaessaysvolumeone/obbligazione_camerale/endnotesita/">Note<span class="arrow" data-outputs-exclude="epub,pdf"><svg data-outputs-exclude="epub,pdf">
                                 <switch>
                                   <use xlink:href="#arrow-forward-icon"></use>
                                 </switch>
@@ -578,7 +578,7 @@
                               </svg> </span></a>
                         </li>
                         <li class="level-1 page-item">
-                          <a href="/accademiaessaysvolumeone/notaries/notaendnotes/">Notes<span class="contributor-divider"> — </span><span class="contributor"><span class="quire-contributor">Laurie Nussdorfer</span></span><span class="arrow" data-outputs-exclude="epub,pdf"><svg data-outputs-exclude="epub,pdf">
+                          <a href="/accademiaessaysvolumeone/notaries/notaendnotes/">Notes<span class="arrow" data-outputs-exclude="epub,pdf"><svg data-outputs-exclude="epub,pdf">
                                 <switch>
                                   <use xlink:href="#arrow-forward-icon"></use>
                                 </switch>
@@ -624,7 +624,7 @@
                               </svg> </span></a>
                         </li>
                         <li class="level-1 page-item">
-                          <a href="/accademiaessaysvolumeone/notaieaccademia/notaendnotesita/">Note<span class="contributor-divider"> — </span><span class="contributor"><span class="quire-contributor">Laurie Nussdorfer</span></span><span class="arrow" data-outputs-exclude="epub,pdf"><svg data-outputs-exclude="epub,pdf">
+                          <a href="/accademiaessaysvolumeone/notaieaccademia/notaendnotesita/">Note<span class="arrow" data-outputs-exclude="epub,pdf"><svg data-outputs-exclude="epub,pdf">
                                 <switch>
                                   <use xlink:href="#arrow-forward-icon"></use>
                                 </switch>
