--- a/notaieaccademia/notaendnotesita/index.html
+++ b/notaieaccademia/notaendnotesita/index.html
@@ -49,7 +49,7 @@
       {
         "@context": "http://schema.org/",
         "@type": "Article",
-        "author": [{ "type": "Person", "name": "undefined undefined" }],
+        "author": [],
         "headline": "Note",
         "partOf": {
           "type": "WebSite",
@@ -230,10 +230,10 @@
             <div class="cite-this">
               <span class="cite-this__heading"> Chicago </span>
               <span class="cite-this__text">
-                Nussdorfer, Laurie. “Note.” In
+                “Note.” In
                 <span style="font-Style: Italic;">Essays on the Accademia Di San Luca: Year of Publication -
-                  2023</span>, by Antonia Fiori and Laurie Nussdorfer. Washington, D.C.:
-                Center for Advanced Study in the Visual Arts, 2023.
+                  2023</span>. Washington, D.C.: Center for Advanced Study in the Visual
+                Arts, 2023.
                 https://valefederici.github.io/accademiaessaysvolumeone/notaieaccademia/notaendnotesita/.
               </span>
             </div>
@@ -241,7 +241,7 @@
             <div class="cite-this">
               <span class="cite-this__heading"> MLA </span>
               <span class="cite-this__text">
-                Nussdorfer, Laurie. “Note.”
+                “Note.”
                 <span style="font-Style: Italic;">Essays on the Accademia Di San Luca: Year of Publication -
                   2023</span>, by Antonia Fiori and Laurie Nussdorfer, Center for Advanced
                 Study in the Visual Arts, 2023,
@@ -381,13 +381,6 @@
           <section class="quire-page__header hero">
             <div class="hero-body">
               <h1 class="quire-page__header__title" id="note">Note</h1>
-              <div class="quire-page__header__contributor">
-                <ul class="quire-contributors-list name-title align-left">
-                  <li class="quire-contributor" id="lnuss">
-                    <span class="quire-contributor__name">Laurie Nussdorfer</span>
-                  </li>
-                </ul>
-              </div>
             </div>
           </section>
 
