--- a/pdf.html
+++ b/pdf.html
@@ -279,7 +279,7 @@
                               — </span><span class="contributor"><span class="quire-contributor">Antonia Fiori</span></span></a>
                         </li>
                         <li class="level-1 page-item">
-                          <a href="#page-accademiaessaysvolumeone-obbligazione-camerale-endnotesita">Note<span class="contributor-divider"> — </span><span class="contributor"><span class="quire-contributor">Antonia Fiori</span></span></a>
+                          <a href="#page-accademiaessaysvolumeone-obbligazione-camerale-endnotesita">Note</a>
                         </li>
                         <li class="level-1 page-item">
                           <a href="#page-accademiaessaysvolumeone-obbligazione-camerale-appendice">Appendice</a>
@@ -308,7 +308,7 @@
                               — </span><span class="contributor"><span class="quire-contributor">Laurie Nussdorfer</span></span></a>
                         </li>
                         <li class="level-1 page-item">
-                          <a href="#page-accademiaessaysvolumeone-notaries-notaendnotes">Notes<span class="contributor-divider"> — </span><span class="contributor"><span class="quire-contributor">Laurie Nussdorfer</span></span></a>
+                          <a href="#page-accademiaessaysvolumeone-notaries-notaendnotes">Notes</a>
                         </li>
                       </ol>
                     </li>
@@ -334,7 +334,7 @@
                               — </span><span class="contributor"><span class="quire-contributor">Laurie Nussdorfer</span></span></a>
                         </li>
                         <li class="level-1 page-item">
-                          <a href="#page-accademiaessaysvolumeone-notaieaccademia-notaendnotesita">Note<span class="contributor-divider"> — </span><span class="contributor"><span class="quire-contributor">Laurie Nussdorfer</span></span></a>
+                          <a href="#page-accademiaessaysvolumeone-notaieaccademia-notaendnotesita">Note</a>
                         </li>
                       </ol>
                     </li>
@@ -396,7 +396,7 @@
                   1644 maintained that in the Papal States contracts were almost
                   always stipulated with cameral obligations “In Statu
                   Ecclesiastico fere semper stipulantur contractus sub
-                  obligatione Camerali.”<a href="#page-accademiaessaysvolumeone-endnotes-note-2"><sup>2</sup></a>
+                  obligatione Camerali.”<a href="#page-endnotes-note-2"><sup>2</sup></a>
                   To underline its importance, we can add that the magnificence
                   of Renaissance and baroque Rome was brought about by artists
                   and artisans whose contracts abounded in obligations
@@ -1727,7 +1727,8 @@
                 <p><strong>Appendix</strong></p>
                 <p>
                   Documents with cameral obligation in the
-                  <a href="#page-accademiaessaysvolumeone-appendix">database</a> of
+                  <a href="#page-accademiaessaysvolumeone-cameral-obligation-appendix">database</a>
+                  of
                   <em>The History of the Accademia di San Luca, c. 1590–1635:
                     Documents from the Archivio di Stato di Roma</em>.
                 </p>
@@ -1751,7 +1752,7 @@
             <div class="container">
               <div class="content">
                 <ol>
-                  <li id="note-1">
+                  <li>
                     <p>
                       For an in-depth study of the cameral obligation, its
                       regulation and history, see Antonia Fiori,
@@ -4226,7 +4227,7 @@
                 <p><strong>Appendice</strong></p>
                 <p>
                   I documenti con obbligazione camerale nel
-                  <a href="#page-accademiaessaysvolumeone-appendice">database</a>
+                  <a href="#page-accademiaessaysvolumeone-obbligazione-camerale-appendice">database</a>
                   dell’Accademia di San Luca.
                 </p>
 
@@ -4242,13 +4243,6 @@
           <section class="quire-page__header hero">
             <div class="hero-body">
               <h1 class="quire-page__header__title" id="note">Note</h1>
-              <div class="quire-page__header__contributor">
-                <ul class="quire-contributors-list name-title align-left">
-                  <li class="quire-contributor" id="afiori">
-                    <span class="quire-contributor__name">Antonia Fiori</span>
-                  </li>
-                </ul>
-              </div>
             </div>
           </section>
 
@@ -6152,13 +6146,6 @@
           <section class="quire-page__header hero">
             <div class="hero-body">
               <h1 class="quire-page__header__title" id="notes">Notes</h1>
-              <div class="quire-page__header__contributor">
-                <ul class="quire-contributors-list name-title align-left">
-                  <li class="quire-contributor" id="lnuss">
-                    <span class="quire-contributor__name">Laurie Nussdorfer</span>
-                  </li>
-                </ul>
-              </div>
             </div>
           </section>
 
@@ -7538,13 +7525,6 @@
           <section class="quire-page__header hero">
             <div class="hero-body">
               <h1 class="quire-page__header__title" id="note">Note</h1>
-              <div class="quire-page__header__contributor">
-                <ul class="quire-contributors-list name-title align-left">
-                  <li class="quire-contributor" id="lnuss">
-                    <span class="quire-contributor__name">Laurie Nussdorfer</span>
-                  </li>
-                </ul>
-              </div>
             </div>
           </section>
 
